--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.0.0",
-    "styled-jsx": "^3.1.0"
+    "styled-jsx": "^3.1.0",
+    "uuid": "^3.2.1"
   }
 }
